--- a/src/styles.css
+++ b/src/styles.css
@@ -565,6 +565,9 @@ video {
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
+.-mt-20 {
+  margin-top: -5rem;
+}
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -625,12 +628,6 @@ video {
 .mt-auto {
   margin-top: auto;
 }
-.-mt-40 {
-  margin-top: -10rem;
-}
-.-mt-20 {
-  margin-top: -5rem;
-}
 .flex {
   display: flex;
 }
@@ -670,9 +667,6 @@ video {
 }
 .h-screen {
   height: 100vh;
-}
-.h-max {
-  height: max-content;
 }
 .max-h-screen {
   max-height: 100vh;
@@ -720,6 +714,9 @@ video {
 .w-screen {
   width: 100vw;
 }
+.min-w-\[300px\] {
+  min-width: 300px;
+}
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -728,6 +725,18 @@ video {
 }
 .max-w-xl {
   max-width: 36rem;
+}
+.max-w-\[400px\] {
+  max-width: 400px;
+}
+.max-w-\[300px\] {
+  max-width: 300px;
+}
+.max-w-\[500px\] {
+  max-width: 500px;
+}
+.max-w-6xl {
+  max-width: 72rem;
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -740,6 +749,9 @@ video {
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-row {
   flex-direction: row;
@@ -806,9 +818,6 @@ video {
 }
 .self-center {
   align-self: center;
-}
-.justify-self-center {
-  justify-self: center;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -917,9 +926,6 @@ video {
 }
 .bg-center {
   background-position: center;
-}
-.object-contain {
-  object-fit: contain;
 }
 .object-cover {
   object-fit: cover;
@@ -1384,20 +1390,12 @@ video {
     margin-bottom: 0px;
   }
 
-  .md\:mr-auto {
-    margin-right: auto;
-  }
-
   .md\:mt-1 {
     margin-top: 0.25rem;
   }
 
   .md\:mt-10 {
     margin-top: 2.5rem;
-  }
-
-  .md\:mr-0 {
-    margin-right: 0px;
   }
 
   .md\:flex {
@@ -1410,6 +1408,10 @@ video {
 
   .md\:h-\[36rem\] {
     height: 36rem;
+  }
+
+  .md\:h-\[40rem\] {
+    height: 40rem;
   }
 
   .md\:w-1\/2 {
@@ -1490,8 +1492,28 @@ video {
 
 @media (min-width: 1024px) {
 
-  .lg\:fixed {
-    position: fixed;
+  .lg\:sticky {
+    position: sticky;
+  }
+
+  .lg\:top-\[20px\] {
+    top: 20px;
+  }
+
+  .lg\:top-\[40px\] {
+    top: 40px;
+  }
+
+  .lg\:top-\[80px\] {
+    top: 80px;
+  }
+
+  .lg\:bottom-\[20px\] {
+    bottom: 20px;
+  }
+
+  .lg\:bottom-\[40px\] {
+    bottom: 40px;
   }
 
   .lg\:h-screen {
@@ -1510,12 +1532,12 @@ video {
     width: 16.666667%;
   }
 
-  .lg\:w-2\/3 {
-    width: 66.666667%;
-  }
-
   .lg\:w-3\/4 {
     width: 75%;
+  }
+
+  .lg\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .lg\:grid-cols-4 {
@@ -1565,17 +1587,5 @@ video {
   .xl\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
-  }
-}
-
-
-@media (min-width: 1536px) {
-
-  .\32xl\:mr-0 {
-    margin-right: 0px;
-  }
-
-  .\32xl\:w-1\/3 {
-    width: 33.333333%;
   }
 }
