--- a/src/styles.css
+++ b/src/styles.css
@@ -565,6 +565,13 @@ video {
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+.-mt-12 {
+  margin-top: -3rem;
+}
 .-mt-20 {
   margin-top: -5rem;
 }
@@ -582,9 +589,6 @@ video {
 }
 .mb-4 {
   margin-bottom: 1rem;
-}
-.mb-6 {
-  margin-bottom: 1.5rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
@@ -714,29 +718,17 @@ video {
 .w-screen {
   width: 100vw;
 }
-.min-w-\[300px\] {
-  min-width: 300px;
-}
 .max-w-7xl {
   max-width: 80rem;
+}
+.max-w-\[500px\] {
+  max-width: 500px;
 }
 .max-w-lg {
   max-width: 32rem;
 }
 .max-w-xl {
   max-width: 36rem;
-}
-.max-w-\[400px\] {
-  max-width: 400px;
-}
-.max-w-\[300px\] {
-  max-width: 300px;
-}
-.max-w-\[500px\] {
-  max-width: 500px;
-}
-.max-w-6xl {
-  max-width: 72rem;
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -747,11 +739,11 @@ video {
 .resize {
   resize: both;
 }
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-row {
   flex-direction: row;
@@ -819,6 +811,9 @@ video {
 .self-center {
   align-self: center;
 }
+.justify-self-center {
+  justify-self: center;
+}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -832,6 +827,9 @@ video {
 }
 .overflow-ellipsis {
   text-overflow: ellipsis;
+}
+.break-all {
+  word-break: break-all;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -904,6 +902,14 @@ video {
 .bg-indigo-100\/70 {
   background-color: rgb(224 231 255 / 0.7);
 }
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
 .bg-slate-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
@@ -917,6 +923,18 @@ video {
 }
 .bg-white\/30 {
   background-color: rgb(255 255 255 / 0.3);
+}
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+.bg-indigo-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+}
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 .bg-\[url\(\'assets\/images\/clothing-store\.jpg\'\)\] {
   background-image: url('assets/images/clothing-store.jpg');
@@ -959,6 +977,10 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 .px-3 {
   padding-left: 0.75rem;
@@ -1147,6 +1169,9 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.leading-8 {
+  line-height: 2rem;
 }
 .tracking-wide {
   letter-spacing: 0.025em;
@@ -1382,10 +1407,6 @@ video {
 
 @media (min-width: 768px) {
 
-  .md\:left-auto {
-    left: auto;
-  }
-
   .md\:mb-0 {
     margin-bottom: 0px;
   }
@@ -1406,20 +1427,12 @@ video {
     display: none;
   }
 
-  .md\:h-\[36rem\] {
-    height: 36rem;
-  }
-
   .md\:h-\[40rem\] {
     height: 40rem;
   }
 
   .md\:w-1\/2 {
     width: 50%;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .md\:w-1\/5 {
@@ -1433,6 +1446,10 @@ video {
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -1496,24 +1513,8 @@ video {
     position: sticky;
   }
 
-  .lg\:top-\[20px\] {
-    top: 20px;
-  }
-
-  .lg\:top-\[40px\] {
-    top: 40px;
-  }
-
   .lg\:top-\[80px\] {
     top: 80px;
-  }
-
-  .lg\:bottom-\[20px\] {
-    bottom: 20px;
-  }
-
-  .lg\:bottom-\[40px\] {
-    bottom: 40px;
   }
 
   .lg\:h-screen {
@@ -1534,14 +1535,6 @@ video {
 
   .lg\:w-3\/4 {
     width: 75%;
-  }
-
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
