--- a/src/styles.css
+++ b/src/styles.css
@@ -536,8 +536,20 @@ video {
 .top-0 {
   top: 0px;
 }
+.-left-6 {
+  left: -1.5rem;
+}
+.-left-10 {
+  left: -2.5rem;
+}
+.-left-20 {
+  left: -5rem;
+}
 .z-30 {
   z-index: 30;
+}
+.z-10 {
+  z-index: 10;
 }
 .row-span-full {
   grid-row: 1 / -1;
@@ -632,6 +644,12 @@ video {
 .mt-auto {
   margin-top: auto;
 }
+.-ml-6 {
+  margin-left: -1.5rem;
+}
+.block {
+  display: block;
+}
 .flex {
   display: flex;
 }
@@ -718,6 +736,39 @@ video {
 .w-screen {
   width: 100vw;
 }
+.w-max {
+  width: max-content;
+}
+.w-\[inherit\] {
+  width: inherit;
+}
+.w-\[\'inherit\'\] {
+  width: 'inherit';
+}
+.w-\[60\%\] {
+  width: 60%;
+}
+.w-\[90\%\] {
+  width: 90%;
+}
+.w-\[1000\%\] {
+  width: 1000%;
+}
+.w-\[100\%\] {
+  width: 100%;
+}
+.w-\[95\%\] {
+  width: 95%;
+}
+.w-\[92\%\] {
+  width: 92%;
+}
+.w-\[92\.5\%\] {
+  width: 92.5%;
+}
+.w-\[92\.4\%\] {
+  width: 92.4%;
+}
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -729,6 +780,12 @@ video {
 }
 .max-w-xl {
   max-width: 36rem;
+}
+.flex-1 {
+  flex: 1 1 0%;
+}
+.grow {
+  flex-grow: 1;
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -802,6 +859,9 @@ video {
 .gap-8 {
   gap: 2rem;
 }
+.gap-5 {
+  gap: 1.25rem;
+}
 .gap-y-10 {
   row-gap: 2.5rem;
 }
@@ -842,6 +902,21 @@ video {
 }
 .rounded-sm {
   border-radius: 0.125rem;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.rounded-bl-lg {
+  border-bottom-left-radius: 0.5rem;
+}
+.rounded-br-lg {
+  border-bottom-right-radius: 0.5rem;
+}
+.rounded-bl {
+  border-bottom-left-radius: 0.25rem;
+}
+.rounded-br {
+  border-bottom-right-radius: 0.25rem;
 }
 .border {
   border-width: 1px;
@@ -902,13 +977,13 @@ video {
 .bg-indigo-100\/70 {
   background-color: rgb(224 231 255 / 0.7);
 }
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 .bg-slate-800 {
   --tw-bg-opacity: 1;
@@ -924,17 +999,12 @@ video {
 .bg-white\/30 {
   background-color: rgb(255 255 255 / 0.3);
 }
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+.bg-white\/20 {
+  background-color: rgb(255 255 255 / 0.2);
 }
-.bg-indigo-500 {
+.bg-\[\#4b5462\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
-}
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+  background-color: rgb(75 84 98 / var(--tw-bg-opacity));
 }
 .bg-\[url\(\'assets\/images\/clothing-store\.jpg\'\)\] {
   background-image: url('assets/images/clothing-store.jpg');
@@ -977,10 +1047,6 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-.px-2\.5 {
-  padding-left: 0.625rem;
-  padding-right: 0.625rem;
 }
 .px-3 {
   padding-left: 0.75rem;
@@ -1041,6 +1107,10 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .pb-1 {
   padding-bottom: 0.25rem;
@@ -1108,6 +1178,12 @@ video {
 .pt-9 {
   padding-top: 2.25rem;
 }
+.pt-4 {
+  padding-top: 1rem;
+}
+.pl-6 {
+  padding-left: 1.5rem;
+}
 .text-left {
   text-align: left;
 }
@@ -1151,6 +1227,10 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .font-bold {
   font-weight: 700;
@@ -1329,6 +1409,30 @@ video {
 }
 
 
+.hover\:bg-slate-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-slate-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-slate-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-slate-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
+
 .hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
@@ -1417,6 +1521,10 @@ video {
 
   .md\:mt-10 {
     margin-top: 2.5rem;
+  }
+
+  .md\:block {
+    display: block;
   }
 
   .md\:flex {
@@ -1571,6 +1679,11 @@ video {
   .lg\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
